# cglab

./: Behavior.cpp  Behavior.h  Buffer.h  CMakeLists.txt  Command.cpp  Command.h  Commands.cpp  Commands.h  Event.cpp  Event.h  Global.h  Shape.cpp  Shape.h  Singleton.h  Terminal.cpp  Terminal.h  events.cpp  events.h  global.cpp  import.h  main.cpp  standardLibrary.h  utilities.cpp  utilities.h
